Solucion a sobreposicion en Empresas - Educalma, Lorenzo G.

--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -573,6 +573,7 @@
 .container-bussines > .send-data .box-rotate.active .front {
   transition: opacity 1.5s;
   opacity: 0;
+  display: none;
 }
 .container-bussines > .send-data .back {
   width: 100%;
