--- a/web/assets/css/stylecuestionario.css
+++ b/web/assets/css/stylecuestionario.css
@@ -1,14 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
+
 /* bontones del la página: videoCurso */
-#btnV1{
+
+#btnV1 {
     border: 1px solid rgba(240, 240, 240);
     color: black;
     background-color: white;
@@ -17,33 +18,32 @@
     font-size: 15px;
     margin: auto;
     color: #4F52D6;
-    
 }
-#btnV1 strong{
+
+#btnV1 strong {
     font-size: 20px;
 }
-#btnV1:hover{
+
+#btnV1:hover {
     border: 1px solid rgba(240, 240, 240);
     background-color: white;
     border-bottom: 3px solid #4F52D6;
     color: #4F52D6;
 }
 
-#btnV3{
-    
+#btnV3 {
     background-color: red;
     height: 5px;
-    width:54%;
+    width: 54%;
     font-size: 15px;
     margin: auto;
     visibility: hidden;
-    
 }
 
 
 /* Cuestionario */
 
-.container_quiz{
+.container_quiz {
     background: white;
     padding: 30rem 5rem 30rem 5rem;
 }
@@ -51,28 +51,28 @@
 .start_btn,
 .info_box,
 .quiz_box,
-.result_box
-{
+.result_box {
     position: absolute;
     top: 53%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2),
-                0px 4px 8px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0px 4px 8px 0 rgba(0, 0, 0, 0.19);
     transition: all 0.3s ease;
 }
 
 .info_box.activeInfo,
 .quiz_box.activeQuiz,
-.result_box.activeResult{
+.result_box.activeResult {
     z-index: 5;
     opacity: 1;
     pointer-events: auto;
     transform: translate(-50%, -50%) scale(1);
 }
 
+
 /* Boton iniciar cuestionario  */
-.start_btn button{
+
+.start_btn button {
     font-size: 25px;
     font-weight: 500;
     color: #4F52D6;
@@ -82,21 +82,21 @@
     border-radius: 5px;
     background: #fff;
     cursor: pointer;
-    
 }
 
+
 /*info de caja */
-.info_box{
+
+.info_box {
     width: 540px;
     background: #fff;
     border-radius: 5px;
     opacity: 0;
     pointer-events: none;
     transform: translate(-50%, -50%) scale(0.9);
-    
 }
 
-.info_box .info_tittle{
+.info_box .info_tittle {
     height: 60px;
     width: 100%;
     border-bottom: 1px solid lightgrey;
@@ -107,21 +107,21 @@
     font-weight: 500;
 }
 
-.info_box .info_list{
+.info_box .info_list {
     padding: 15px 35px;
 }
 
-.info_box .info_list .info{
+.info_box .info_list .info {
     margin: 5px 0;
     font-size: 17px;
 }
 
-.info_box .info_list .info span{
+.info_box .info_list .info span {
     font-weight: 600;
     color: #4F52D6;
 }
 
-.info_box .buttons{
+.info_box .buttons {
     height: 60px;
     display: flex;
     align-items: center;
@@ -130,7 +130,7 @@
     border-top: 1px solid lightgrey;
 }
 
-.info_box .buttons button{
+.info_box .buttons button {
     margin: 0 5px;
     height: 40px;
     width: 100px;
@@ -144,27 +144,28 @@
     transition: all 0.3s ease;
 }
 
-.buttons button.restart{
+.buttons button.restart {
     color: #fff;
     background: #7C83FD;
 }
 
-.buttons button.restart:hover{
+.buttons button.restart:hover {
     background: #4F52D6;
 }
 
-.buttons button.quit{
+.buttons button.quit {
     color: #4F52D6;
-    
 }
 
-.buttons button.quit:hover{
+.buttons button.quit:hover {
     color: #fff;
     background: #4F52D6;
 }
 
+
 /* Caja de cuestionario */
-.quiz_box{
+
+.quiz_box {
     width: 550px;
     background: #fff;
     border-radius: 5px;
@@ -174,7 +175,7 @@
     transform: translate(-50%, -50%) scale(1);
 }
 
-.quiz_box header{
+.quiz_box header {
     position: relative;
     z-index: 99;
     height: 70px;
@@ -187,12 +188,12 @@
     box-shadow: 0 3px 5px 1px rgba(0, 0, 0, 0.1);
 }
 
-.quiz_box header .title{
+.quiz_box header .title {
     font-size: 20px;
     font-weight: 600;
 }
 
-.quiz_box header .timers{
+.quiz_box header .timers {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -204,27 +205,27 @@
     padding: 0 8px;
 }
 
-.quiz_box header .timers .time_text{
+.quiz_box header .timers .time_text {
     font-weight: 400;
     font-size: 17px;
     user-select: none;
 }
 
-.quiz_box header .timers .timer_sec{
+.quiz_box header .timers .timer_sec {
     font-size: 18px;
     font-weight: 500;
     background: #343a40;
     height: 30px;
     width: 45px;
-    color: #fff ;
+    color: #fff;
     text-align: center;
     line-height: 30px;
     border-radius: 5px;
     border: 1px solid #343a40;
-    user-select: none; 
+    user-select: none;
 }
 
-.quiz_box header .time_line{
+.quiz_box header .time_line {
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -232,22 +233,22 @@
     background: #4F52D6;
 }
 
-.quiz_box section{
+.quiz_box section {
     padding: 25px 30px 20px 30px;
     background: #fff;
 }
 
-.quiz_box section .que_text{
+.quiz_box section .que_text {
     font-size: 25px;
     font-weight: 600;
 }
 
-.quiz_box section .option_list{
+.quiz_box section .option_list {
     padding: 20px 0;
     display: block;
 }
 
-section .option_list .option{
+section .option_list .option {
     background: aliceblue;
     border: 1px solid #7C83FD;
     border-radius: 5px;
@@ -261,17 +262,17 @@ section .option_list .option{
     transition: all 0.3s ease;
 }
 
-section .option_list .option:hover{
+section .option_list .option:hover {
     color: #4F52D6;
     background: #cce5ff;
     border-color: #b8daff;
 }
 
-.option_list .option:last-child{
+.option_list .option:last-child {
     margin-bottom: 0px;
 }
 
-.option_list .option .icon{
+.option_list .option .icon {
     height: 28px;
     width: 28px;
     text-align: center;
@@ -279,35 +280,35 @@ section .option_list .option:hover{
     line-height: 24px;
     pointer-events: none;
     transition: all 0.3s ease;
-    
 }
 
-.option_list .option .icon.tick{
+.option_list .option .icon.tick {
     color: #23903c;
     border-color: #23903c;
-    
 }
 
-.option_list .option .icon.cross{
+.option_list .option .icon.cross {
     color: #a4283a;
-    
     border-color: #a4283a;
 }
-.option_list .option.correct{
+
+.option_list .option.correct {
     color: #155724;
     background: #d4edda;
     border-color: #c3e6cb;
 }
-.option_list .option.incorrect{
+
+.option_list .option.incorrect {
     color: #721c24;
     background: #f8d7da;
     border-color: #f5c6cb;
 }
-.option_list .option.disabled{
+
+.option_list .option.disabled {
     pointer-events: none;
 }
 
-.quiz_box footer{
+.quiz_box footer {
     height: 60px;
     width: 100%;
     padding: 0 30px;
@@ -316,23 +317,23 @@ section .option_list .option:hover{
     justify-content: space-between;
 }
 
-.quiz_box footer .total_que span{
+.quiz_box footer .total_que span {
     display: flex;
     user-select: none;
     margin-top: 30px;
 }
 
-footer .total_que span p{
+footer .total_que span p {
     font-weight: 500;
     padding: 0 5px;
     margin-top: -1px;
 }
 
-.total_que span p:first-child{
+.total_que span p:first-child {
     padding-left: 0px;
 }
 
-footer .next_btn{
+footer .next_btn {
     display: none;
     height: 40px;
     padding: 0 13px;
@@ -347,18 +348,20 @@ footer .next_btn{
     cursor: pointer;
 }
 
-footer .next_btn:hover{
+footer .next_btn:hover {
     background: #4F52D6;
 }
 
-footer button.show{
+footer button.show {
     opacity: 1;
     pointer-events: auto;
     transform: scale(1);
 }
 
+
 /* Caja resultado */
-.result_box{
+
+.result_box {
     background: #fff;
     width: 450px;
     padding: 25px 30px;
@@ -374,36 +377,36 @@ footer button.show{
     margin-top: 20px;
 }
 
-.result_box .icon{
+.result_box .icon {
     font-size: 100px;
     color: #4F52D6;
     margin-bottom: 10px;
 }
 
-.result_box .complete_text{
+.result_box .complete_text {
     font-size: 20px;
     font-weight: 500;
 }
 
-.result_box .score_text span{
+.result_box .score_text span {
     display: flex;
     margin: 10px 0;
     font-size: 18px;
     font-weight: 500;
 }
 
-.score_text span p{
+.score_text span p {
     font-weight: 700;
     padding: 0 4px;
     margin-top: 2px;
 }
 
-.result_box .buttons{
+.result_box .buttons {
     display: flex;
     margin: 20px 0;
 }
 
-.result_box .buttons button{
+.result_box .buttons button {
     margin: 0 10px;
     height: 40px;
     padding: 0 20px;
@@ -417,8 +420,8 @@ footer button.show{
     transition: all 0.3s ease;
 }
 
-.muestras{
-    width:70%;
+.muestras {
+    width: 70%;
     margin: 30px auto;
     border-radius: 10px;
     font-weight: bolder;
@@ -432,112 +435,96 @@ footer button.show{
 
 
 /*Responsive res 1600 a menos*/
+
 @media screen and (max-width: 1600px) {
-    .container_quiz{
+    .container_quiz {
         background: white;
         padding: 20rem 5rem 35rem 5rem;
     }
-    
     .start_btn,
     .info_box,
     .quiz_box,
-    .result_box
-    {
-    top: 53%;
+    .result_box {
+        top: 53%;
     }
-
     .info_box.activeInfo,
     .quiz_box.activeQuiz,
-    .result_box.activeResult{
-    z-index: 5;
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(0.9);
+    .result_box.activeResult {
+        z-index: 5;
+        opacity: 1;
+        pointer-events: auto;
+        transform: translate(-50%, -50%) scale(0.9);
     }
-    
-    .start_btn button{
+    .start_btn button {
         font-size: 25px;
-        
     }
-
-    .result_box{
+    .result_box {
         transform: translate(-50%, -50%) scale(0.7);
         margin-top: 40px;
     }
-
 }
 
 
 /*Media Querys*/
 
+
 /*Responsive res 994 a menos*/
+
 @media screen and (max-width: 994px) {
-    .container_quiz{
+    .container_quiz {
         background: white;
         padding: 20rem 5rem 35rem 5rem;
     }
-    
     .start_btn,
     .info_box,
     .quiz_box,
-    .result_box
-    {
-    top: 59%;
+    .result_box {
+        top: 59%;
     }
-
     .info_box.activeInfo,
     .quiz_box.activeQuiz,
-    .result_box.activeResult{
-    z-index: 5;
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(0.8);
+    .result_box.activeResult {
+        z-index: 5;
+        opacity: 1;
+        pointer-events: auto;
+        transform: translate(-50%, -50%) scale(0.8);
     }
-    
-    .start_btn button{
+    .start_btn button {
         font-size: 25px;
-        
     }
-
-    .result_box{
+    .result_box {
         transform: translate(-50%, -50%) scale(0.7);
         margin-top: 50px;
     }
-
 }
 
+
 /*Responsive res 768 a menos*/
+
 @media screen and (max-width: 768px) {
-    .container_quiz{
+    .container_quiz {
         background: white;
         padding: 15rem 5rem 35rem 5rem;
     }
-    
     .start_btn,
     .info_box,
     .quiz_box,
-    .result_box
-    {
-    top: 60%;
+    .result_box {
+        top: 60%;
     }
-
     .info_box.activeInfo,
     .quiz_box.activeQuiz,
-    .result_box.activeResult{
-    z-index: 5;
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(0.7);
+    .result_box.activeResult {
+        z-index: 5;
+        opacity: 1;
+        pointer-events: auto;
+        transform: translate(-50%, -50%) scale(0.7);
     }
-    
-    .start_btn button{
+    .start_btn button {
         font-size: 20px;
-        
     }
-
-    .result_box{
+    .result_box {
         transform: translate(-50%, -50%) scale(0.7);
         margin-top: 30px;
     }
-
 }
