--- a/web/assets/css/agrecursos.css
+++ b/web/assets/css/agrecursos.css
@@ -386,7 +386,7 @@ textarea {
     resize: none;
 }
 
-.container-fluid .container .seccion .row .col-9 .form-row .form-group .form-label {
+.form-label {
     color: #4F52D6;
     font-weight: bold;
 }
@@ -405,22 +405,22 @@ textarea {
     box-shadow: 6px 2px 8px -3px rgba(212, 212, 212, 1);
 }
 
-.container-fluid .container .seccion .row .col-3 .list-group .list-group-item {
+.list-group-item {
     background: none;
 }
 
-.container-fluid .container .seccion .row .col-3 .list-group .active {
+.active {
     background: #5c5dc4;
     border: none;
     border-radius: 0px;
     font-size: .9rem;
 }
 
-.container-fluid .container .seccion .row .col-3 .list-group .active:focus {
+.active:focus {
     outline: none;
 }
 
-.container-fluid .container .seccion .row .col-3 .list-group .lista2 .btn-back {
+.btn-back {
     margin-top: 5rem;
     color: #4F52D6;
     border: 2px solid #4F52D6;
@@ -428,18 +428,18 @@ textarea {
     margin: 2rem 1rem;
 }
 
-.container-fluid .container .seccion .row .col-3 .list-group .lista2 .btn-back:hover {
+.btn-back:hover {
     color: white;
     background: #4F52D6;
     border: 2px solid #4F52D6;
     transition: .7s;
 }
 
-.container-fluid .container .seccion .row .col-3 .list-group .lista2 .btn-back:focus {
+.btn-back:focus {
     box-shadow: none;
 }
 
-.container-fluid .container .seccion .row .col-9 form {
+form {
     background: whitesmoke;
     padding: 3.1rem 1rem;
     margin: 0 auto;
@@ -447,57 +447,73 @@ textarea {
     height: 100%;
 }
 
-.container-fluid .container .seccion .row .col-3 .list-group-flush .list-group-item {
+.list-group-item {
     color: #4F52D6;
     text-transform: uppercase;
     font-weight: bold;
     background: none;
 }
 
-.container-fluid .container .seccion .row .col-3 .list-group .lista2 .list-group-item:hover {
+.list-group-item:hover {
     background: #6A6DE5;
     color: white;
 }
 
-.container-fluid .container .seccion .row .col-3 .list-group .lista2 .list-group-item-action {
+.list-group-item-action {
     border-radius: 0px;
     border-right: none;
     border-left: none;
     font-size: .9rem;
 }
 
-.container-fluid .container .seccion .row .col-9 .form-row .form-group .form-control {
+.form-control {
     outline: none;
     background: transparent;
     border: 1px solid #4F52D6;
 }
 
-.container-fluid .container .seccion .row .col-9 .form-row .form-group .form-control:focus {
+.form-control:focus {
     outline: none;
     box-shadow: none;
     border: 1px solid #4F52D6;
 }
 
-.container-fluid .container .seccion .row .col-9 .form-row .form-group .column .btn-outline-danger {
+.btn-outline-danger {
     background: #4F52D6;
     color: white;
     border: 1px solid #4F52D6;
+    width: 100%;
 }
 
-.container-fluid .container .seccion .row .col-9 .form-row .form-group .column .btn-outline-danger:hover {
+.btn-outline-danger:hover {
     background: #3c3ea5;
     color: white;
     border: 1px solid #3c3ea5;
 }
 
-.container-fluid .container .seccion .row .col-9 .form-row .btn-add {
+.btn-add {
     background: #4F52D6;
     color: white;
     border: 1px solid #4F52D6;
 }
 
-.container-fluid .container .seccion .row .col-9 .form-row .btn-add:hover {
+.btn-add:hover {
     background: #3c3ea5;
     color: white;
     border: 1px solid #3c3ea5;
+}
+.content-imagen{
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 150px;
+    position:relative;
+    border:1px solid #4F52D6;
+    display:flex;
+    justify-content:center;
+    overflow:hidden;
+    border-radius: 0.25rem;
+}
+.content-imagen img{
+    flex-shrink:0;
+    min-height:100%;
 }
