--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -10,6 +10,7 @@
                 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
                 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
                 @import url('https://fonts.googleapis.com/css2?family=Imprima&display=swap');
+                @import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
                 /*------------------------------------------------------------------
     IMPORT FILES
 -------------------------------------------------------------------*/
